<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="16dip"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="ZakatGold SDN BHD"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/about"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/studname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/studname1" />

    <TextView
        android:id="@+id/studname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/studname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/studname2" />

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/studname2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/group" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/link"
        android:textAlignment="center"
        android:textColor="#1E4D71"
        android:textColorLink="#C58322"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/copyright" />

</RelativeLayout>